Add protobuf definitions & work on impl
- Work on thread pool
- Fix HttpServer::register_handler
- Create search, lobby & game sessions managers
- Add grpc to cmake build
- Update Dockerfile
- Add gRPC clients
- Add gRPC delegating implementations of I/O interface

--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@
 # Precompiled Headers
 *.gch
 *.pch
+*.pb.*
 
 # Compiled Dynamic libraries
 *.so
@@ -31,4 +32,7 @@
 *.out
 *.app
 
+.vs/
+.vscode/
+out/
 deps/
